[project]
name = "ecommerce-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-pinecone>=0.2.13",
    "langsmith>=0.8.16",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
